<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beginner_baller_bg"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:src="@drawable/swoosh_logo"
        android:layout_marginTop="27dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/string_i_am_a"
        android:textColor="@android:color/background_light"
        android:textSize="17sp"
        android:textAlignment="center"
        android:layout_marginTop="33dp"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <GridLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:layout_marginTop="37dp"
        android:alpha="0.70"
        android:id="@+id/gridLayout"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true">

        <Button
            android:text="@string/string_beginner"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:background="@drawable/button_styles"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/string_baller"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_column="3"
            android:layout_row="0"
            android:text="@string/string_baller"
            android:background="@drawable/button_styles"
            android:textColor="@android:color/white"/>

    </GridLayout>

    <Button
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="29dp"
        android:alpha="0.70"
        android:background="@drawable/button_styles"
        android:text="@string/string_finish"
        android:textColor="@android:color/white"
        android:visibility="visible"
        android:layout_alignParentRight="true"
        android:layout_marginRight="29dp" />

</RelativeLayout>