<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.genson.amor.swoosh.WelcomeActivity"
    android:orientation="horizontal"
    android:background="@drawable/welcome_screen_bg">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:src="@drawable/swoosh_logo"
        android:id="@+id/imageView"
        android:layout_marginTop="19dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/allin"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="53dp"
        android:text="@string/string_go_all_in"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="60sp"
        android:layout_below="@+id/imageView" />

    <TextView
        android:id="@+id/allout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/string_on_going_all_out"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_below="@+id/allin"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/string_paragraph"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/allout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="29dp"
        android:alpha="0.80"
        android:background="@drawable/button_styles"
        android:text="@string/string_get_started"
        android:textColor="@android:color/white"
        android:visibility="visible"
        android:layout_alignParentRight="true"
        android:layout_marginRight="29dp"
        android:id="@+id/btnStart"/>


</RelativeLayout>

